--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>welcome to new project</title>
+    <title>Jop Portal</title>
 </head>
 <body>
-
+<h1>welcome to new project</h1>
 </body>
 </html>
